# clasdigi

./: CMakeLists.txt  Notes.md  README.md
cmake/: root.cmake
config/: clasdigi-config.cxx
data/translation/: HTCC.table
share/: plot_field.cxx  plot_field_xy.cxx
src/: dc12_geometry.for
src/ClasDAQ/: CMakeLists.txt
src/ClasDAQ/include/: ADC.h  CrateModule.h  Discriminator.h  FlashADC.h  LinkDef.h  ModuleChannel.h  Scaler.h  TDC.h  TriggerSupervisor.h
src/ClasDAQ/src/: ADC.cxx  CrateModule.cxx  Discriminator.cxx  Scaler.cxx  TDC.cxx  TriggerSupervisor.cxx
src/ClasHits/: CMakeLists.txt
src/ClasHits/include/: ADCHit.h  CLAS12MagneticField.h  LinkDef.h
src/ClasHits/src/: ADCHit.cxx  CLAS12MagneticField.cxx  FlashADCHit.cxx
src/ClasSigs/: CMakeLists.txt
src/ClasSigs/include/: DigitizedSignal.h
src/ClasSigs/src/: ADCSignal.cxx  SimpleDriftChamberHit.cxx
src/DAQ/: .CMakeLists.txt.swp  CMakeLists.txt
src/DAQ/include/: ADC.h  CLAS12DAQ.h  Crate.h  CrateModule.h  DAQManager.h  Detectors.h  Discriminator.h  FlashADC.h  GlobalDistributionCrate.h  LinkDef.h  Module.h  ModuleChannel.h  Scaler.h  SignalDistribution.h  SubSystemProcessor.h  TDC.h  Trigger.h  TriggerDistribution.h  TriggerInterface.h  TriggerSupervisor.h
src/DAQ/src/: ADC.cxx  CLAS12DAQ.cxx  Crate.cxx  CrateModule.cxx  DAQManager.cxx  Detectors.cxx  Discriminator.cxx  FlashADC.cxx  GlobalDistributionCrate.cxx  ModuleChannel.cxx  Scaler.cxx  SignalDistribution.cxx  SubSystemProcessor.cxx  TDC.cxx  Trigger.cxx  TriggerDistribution.cxx  TriggerInterface.cxx  TriggerSupervisor.cxx
src/Geo/: CMakeLists.txt
src/Geo/include/: CLAS12EventDisplay.h  DCGeometry.h  DCWire.h  EventNavHandler.h  GeoUtil.h  HtmlSummary.h  LinkDef.h  MultiView.h  RCGeometry.h  RCWire.h  RHGeometry.h  SiVertexTrackerGeometry.h  ThrownEvent.h
src/Geo/src/: CLAS12EventDisplay.cxx  DCGeometry.cxx  DCWire.cxx  EventNavHandler.cxx  GeoUtil.cxx  HtmlSummary.cxx  MultiView.cxx  RCGeometry.cxx  RCWire.cxx  RHGeometry.cxx  SiVertexTrackerGeometry.cxx
src/Hits/: .CMakeLists.txt.swp  CMakeLists.txt
src/Hits/include/: ADCHit.h  CLAS12Event.h  CLAS12HitsEvent.h  DCHitsEvent.h  DCWire.h  DigitizedDriftChamberHit.h  DriftChamberIonPairHit.h  DriftChamberParticleHit.h  ECHitsEvent.h  EventHitMask.h  FlashADCHit.h  ForwardHitMask.h  HTCCHitsEvent.h  LinkDef.h  ParticleHit.h  PhotonCounterHit.h  PhotonHit.h  RCHitsEvent.h  RHHit.h  RecoilChamberParticleHit.h  RecoilScintEvent.h  RecoilScintHit.h  SVTEvent.h  ScintChannelHit.h  SimpleDriftChamberHit.h  TDCHit.h  TriggerEvent.h
src/Hits/src/: ADCHit.cxx  CLAS12Event.cxx  CLAS12HitsEvent.cxx  DCHitsEvent.cxx  DCWire.cxx  DriftChamberIonPairHit.cxx  DriftChamberParticleHit.cxx  ECHitsEvent.cxx  EventHitMask.cxx  ForwardHitMask.cxx  HTCCHitsEvent.cxx  ParticleHit.cxx  PhotonCounterHit.cxx  PhotonHit.cxx  RCHitsEvent.cxx  RHHit.cxx  RecoilChamberParticleHit.cxx  RecoilScintEvent.cxx  RecoilScintHit.cxx  SVTEvent.cxx  ScintChannelHit.cxx  TDCHit.cxx  TriggerEvent.cxx
src/Kine/: CMakeLists.txt
src/Kine/include/: DISKinematics.h  DVCSKinematics.h  ElectronKinematics.h  IonKinematics.h  Kinematics.h  LinkDef.h
src/Kine/src/: DVCSKinematics.cxx  ElectronKinematics.cxx  Kinematics.cxx
src/Mag/: CMakeLists.txt
src/Mag/include/: CLAS12MagneticField.h  Field.h  LinkDef.h  SolenoidField.h  ToroidField.h
src/Mag/src/: CLAS12MagneticField.cxx  Field.cxx  SolenoidField.cxx  ToroidField.cxx
src/Sigs/: .CMakeLists.txt.swp  CMakeLists.txt
src/Sigs/include/: ADCSignal.h  CLAS12SigsEvent.h  DCSigsEvent.h  DigitizedDriftChamberHit.h  DigitizedSignal.h  FlashADCSignal.h  HTCCSigsEvent.h  LinkDef.h
src/Sigs/src/: CLAS12SigsEvent.cxx  DCSigsEvent.cxx  DigitizedDriftChamberHit.cxx  DigitizedSignal.cxx  FlashADCSignal.cxx  HTCCSigsEvent.cxx  TDCSignal.cxx
src/Sim/: CMakeLists.txt
src/Sim/include/: FlashADCSignal.h  LinkDef.h  RunConfiguration.h  TDCSignal.h  ThrownEvent.h
src/Sim/src/: FlashADCSignal.cxx  RunConfiguration.cxx  ThrownEvent.cxx
src/clasdigi/: CMakeLists.txt  clasdigi.cxx  clasdigi_DC.cxx  clasdigi_HTCC.cxx  clasdigi_output_format.cxx
src/config/: CMakeLists.txt  ClasDigiConfig.cmake.in  ClasDigiConfig.h.in  ClasDigiConfigVersion.cmake.in
src/tests/: CMakeLists.txt  clasdigi-test1.cxx  crate_test.cxx  crate_test2.cxx  create_test_hits.cxx  field_test.cxx  field_test_solenoid.cxx  field_test_toroid.cxx  flash_adc_test1.cxx  geo_test1.cxx  lund_test.cxx  sigs_test1.cxx  tdc_test1.cxx  tdc_test2.cxx  template_modules.cxx  trigger_test1.cxx
